~// Add automatic hyphenation to fix spacing in justified text

--- a/index.css
+++ b/index.css
@@ -40,6 +40,8 @@ body {
   font-size: 14px;
   line-height: 1.7;
   text-align: justify;
+  hyphens: auto;
+  -webkit-hyphens: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-bottom: 60px;
